@@ -22,6 +22,9 @@ In particular, subgraph info is still missing.
 - Add option report_forest for new() and as a mutator. Calling new(report_forest => 1) prints all the
 information provided with those 4 new getters.
 - Expand the POD for the lexer and the parse giving details on input and output stream content.
+- Move the template for the demo from html/graphviz2.marpa.index.tx to htdocs/assets/templates/graphviz/marpa/
+where it should have been all along. Patch scripts/generate.index.pl to match.
+- Add cache control metadata to that template.
 EOT
 
 [V 1.05]
