@@ -4,6 +4,9 @@
 <head>
   <title>Index of sample files created by GraphViz2::Marpa</title>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+  <meta http-equiv="cache-control" content="no-cache">
+  <meta http-equiv="pragma" content="no-cache">
+  <link rel="stylesheet" type="text/css" href="/assets/css/local/default.css" />
 </head>
 <body>
   <h1>Index of sample files created by <a href="http://metacpan.org/release/GraphViz2-Marpa">GraphViz2::Marpa</a> V <: $version :>.</h1>
